; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/winspool/extr_info.c_check_win9x.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/winspool/extr_info.c_check_win9x.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR_CALL_NOT_IMPLEMENTED = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @check_win9x to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_win9x() #0 {
  %1 = alloca i32, align 4
  br i1 true, label %2, label %9

2:                                                ; preds = %0
  %3 = call i32 @SetLastError(i32 -559038737)
  %4 = call i32 @pGetPrinterW(i32* null, i32 0, i32* null, i32 0, i32* null)
  %5 = call i64 (...) @GetLastError()
  %6 = load i64, i64* @ERROR_CALL_NOT_IMPLEMENTED, align 8
  %7 = icmp eq i64 %5, %6
  %8 = zext i1 %7 to i32
  store i32 %8, i32* %1, align 4
  br label %11

9:                                                ; preds = %0
  %10 = load i32, i32* @TRUE, align 4
  store i32 %10, i32* %1, align 4
  br label %11

11:                                               ; preds = %9, %2
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i32 @pGetPrinterW(i32*, i32, i32*, i32, i32*) #1

declare dso_local i32 @SetLastError(i32) #1

declare dso_local i64 @GetLastError(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
